# ffmpeg_base

./: CMakeLists.txt  README.md  main.c
lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
src/audioPlay/: sample.c
src/videoPlay/: videoPlayer.c
